# tkDNN

./: CMakeLists.txt  api_test.py
api/: PythonApi.cpp  PythonApi.h  tkdnn_api.py
cmake/: FindCUDNN.cmake
demo/demo/: demo.cpp  map.cpp
include/: PythonApi.h  tkdnnlib.h
include/tkDNN/: DetectionNN.h  Yolo3Detection.h  tkdnn.h  utils.h
scripts/: test_all_tests.sh
src/: PythonApi.cpp  Yolo3Detection.cpp  tkdnnlib.cpp  utils.cpp
tests/darknet/cfg/: yolo4.cfg
tests/darknet/names/: coco.names
